--- a/paginaprincipal.css
+++ b/paginaprincipal.css
@@ -1,13 +1,76 @@
-.boasvindas {
-    margin-top: 20px;
-    margin-left: 70px;
-    margin-right: 30px;
-    background-color: darkgray;
-    border-radius: 10px
+*{
+    margin: 0;
+    padding: 0;
+}
+.container{
+    display: grid;
+    height: 100vh;
+    grid-template-columns: 0.7fr 1.1fr 1.1fr 1.1fr 1.1fr;
+    grid-template-rows: 0.4fr 0.6fr 0.6fr 0.9fr 0.9fr;
+    grid-template-areas:"navegador navegador navegador navegador navegador"
+                        "barralateral main main main main"
+                        "barralateral redacao redacao redacao redacao"
+                        "barralateral conteudo1 conteudo2 conteudo3 conteudo4"
+                        "barralateral conteudo5 conteudo6 conteudo7 conteudo8"
+                        
+}
+.navegador{
+    background-color: lightblue;
+    grid-area: navegador;
+    display: flex;
+}
+.main{
+    background-color: lightcoral;
+    grid-area: main;
+}
+.boasvindas{
+    padding: 10px 10px;
+    text-align: center;
+    font-size: medium;
+    font-family: sans-serif;
+}
+.textoboasvindas{
+    font-size: 22px;
+}
+   
+.barralateral{
+    background-color: lightcyan;
+    grid-area: barralateral;
 }
 .redacao{
-    background-color: darkgrey;
+    background-color: lightgreen;
+    grid-area: redacao;
 }
-.temas{
-    background-color: darkgray;
+.conteudo1{
+    background-color: lightskyblue;
+    grid-area: conteudo1;
+
+}
+.conteudo2{
+    background-color: lightgrey;
+    grid-area: conteudo2;
+}
+.conteudo3{
+    background-color: lightseagreen;
+    grid-area: conteudo3;
+}
+.conteudo4{
+    background-color: lightpink;
+    grid-area: conteudo4;
+}
+.conteudo5{
+    background-color: lightpink;
+    grid-area: conteudo5;
+}
+.conteudo6{
+    background-color: lightskyblue;
+    grid-area: conteudo6;
+}
+.conteudo7{
+    background-color: lightgrey;
+    grid-area: conteudo7;
+}
+.conteudo8{
+    background-color: lightseagreen;
+    grid-area: conteudo8;
 }
